# code-index

./: .gitignore  CLAUDE.md  Cargo.toml  deploy.sh  run-tests.sh
src/: config.rs  db.rs  indexer.rs  main.rs  main_project.rs  main_tests.rs  mcp.rs  mcp_tests.rs  model.rs  project.rs  query.rs  resolver.rs  test_support.rs  watcher.rs
src/parser/: mod.rs  php.rs  python.rs  qml.rs  rust_lang.rs  typescript.rs  typescript_extra_tests.rs
src/parser/rust_lang/: macro_calls.rs  tests.rs
src/parser/typescript/: calls.rs  inheritance.rs
src/query/: calls.rs  common.rs  hierarchy.rs  imports.rs  references.rs  symbols.rs  test_support.rs  testing.rs
