[package]
name = "code-index"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
streaming-iterator = "0.1"
tree-sitter = "0.26.3"
tree-sitter-php = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23.5"
tree-sitter-typescript = "0.23.2"
blake3 = "1"
ignore = "0.4"
notify-debouncer-mini = "0.7"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
dirs = "6"
ast-outline = { path = "/home/osso/Repos/ast-outline" }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
